2018-09-27  Markus Gans  <guru.mail@muenster.de>
	* Move time event processing from FApplication to FObject

2018-09-26  Markus Gans  <guru.mail@muenster.de>
	* The FListViewItem class now has a getData() and a setData() method 
	  similar to the FListBoxItem class.

2018-09-24  Markus Gans  <guru.mail@muenster.de>
	* Stricter use of the keyword virtual
	* Add a first steps document

2018-09-20  Markus Gans  <guru.mail@muenster.de>
	* Added pkg-config file finalcut.pc
	* The entire library source code is now encapsulated under 
	  the namespace finalcut. All examples and tests have been 
	  modified to fit the namespace.

2018-09-16  Markus Gans  <guru.mail@muenster.de>
	* Implement a ttytype test for the FTermDetection unit test

2018-09-14  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FTermDetection with a terminal simulation 
	  for common terminals
	* Some minor terminal detection bug fixes

2018-09-12  Markus Gans  <guru.mail@muenster.de>
	* Removes the deprecated keyword "register" 
	  from the source code

2018-09-02  Markus Gans  <guru.mail@muenster.de>
	* Fix mouse wheel behavior over horizontal scroll bars
	  in FTextView
	* Some small code improvements

2018-09-01  Markus Gans  <guru.mail@muenster.de>
	* Compiles now with newer gcc

2018-08-31  Markus Gans  <guru.mail@muenster.de>
	* Fixed a problem for a non-debug compilation

2018-08-08  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FTermcapQuirks

2018-07-29  Markus Gans  <guru.mail@muenster.de>
	* Added numeric Keypad [/], [*], [-], [+] support
	* Handling of keys that are substrings of other keys
	* More tests in FKeyboard unit test

2018-07-27  Markus Gans  <guru.mail@muenster.de>
	* The array for keyboard input of UTF-8 characters was 
	  not long enough for 4 bytes of UTF-8 codes.
	* More tests in FKeyboard unit test

2018-07-22  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FKeyboard

2018-07-15  Markus Gans  <guru.mail@muenster.de>