@@ -92,6 +92,7 @@ class FListViewItem : public FObject
     // Accessors
     const char*       getClassName() const;
     uInt              getColumnCount() const;
+    int               getSortColumn() const;
     FString           getText (int) const;
     FWidget::data_ptr getData() const;
     uInt              getDepth() const;
@@ -114,6 +115,8 @@ class FListViewItem : public FObject
     bool              isExpandable() const;
 
     // Methods
+    template<typename Compare>
+    void              sort (Compare);
     FObjectIterator   appendItem (FListViewItem*);
     void              replaceControlCodes();
     int               getVisibleLines();
@@ -122,6 +125,7 @@ class FListViewItem : public FObject
     // Data Members
     FStringList       column_list;
     FWidget::data_ptr data_pointer;
+    FObjectIterator   root;
     int               visible_lines;
     bool              expandable;
     bool              is_expand;
@@ -259,12 +263,23 @@ class FListView : public FWidget
     uInt                 getCount();
     fc::text_alignment   getColumnAlignment (int) const;
     FString              getColumnText (int) const;
+    fc::sorting_type     getColumnSortType (int) const;
+    fc::sorting_order    getSortOrder() const;
+    int                  getSortColumn() const;
     FListViewItem*       getCurrentItem();
 
     // Mutators
     virtual void         setGeometry (int, int, int, int, bool = true);
     void                 setColumnAlignment (int, fc::text_alignment);
     void                 setColumnText (int, const FString&);
+    void                 setColumnSortType (int,fc::sorting_type \
+                                                    = fc::by_name);
+    void                 setColumnSort (int, fc::sorting_order \
+                                                 = fc::ascending);
+    template<typename Compare>
+    void                 setUserAscendingCompare (Compare);
+    template<typename Compare>
+    void                 setUserDescendingCompare (Compare);
     bool                 setTreeView (bool);
     bool                 setTreeView();
     bool                 unsetTreeView();
@@ -289,6 +304,7 @@ class FListView : public FWidget
                                 , FObjectIterator );
     FObjectIterator      beginOfList();
     FObjectIterator      endOfList();
+    virtual void         sort();
 
     // Event handlers
     virtual void         onKeyPress (FKeyEvent*);
@@ -313,6 +329,7 @@ class FListView : public FWidget
     // Typedef
     struct Header;  // forward declaration
     typedef std::vector<Header> headerItems;
+    typedef std::vector<fc::sorting_type> sortTypes;
 
     // Constants
     static const int USE_MAX_SIZE = -1;
@@ -325,6 +342,8 @@ class FListView : public FWidget
 
     // Methods
     void                 init();
+    template<typename Compare>
+    void                 sort (Compare);
     uInt                 getAlignOffset (fc::text_alignment, uInt, uInt);
     virtual void         draw();
     void                 drawColumnLabels();
@@ -389,6 +408,11 @@ class FListView : public FWidget
     int                  xoffset;
     int                  nf_offset;
     int                  max_line_width;
+    int                  sort_column;
+    sortTypes            sort_type;
+    fc::sorting_order    sort_order;
+    bool (*user_defined_ascending) (const FObject*, const FObject*);
+    bool (*user_defined_descending) (const FObject*, const FObject*);
 
     // Friend class
     friend class FListViewItem;
@@ -426,8 +450,26 @@ inline const char* FListView::getClassName() const
 { return "FListView"; }
 
 //----------------------------------------------------------------------
+inline fc::sorting_order FListView::getSortOrder() const
+{ return sort_order; }
+
+//----------------------------------------------------------------------
+inline int FListView::getSortColumn() const
+{ return sort_column; }
+
+//----------------------------------------------------------------------
 inline FListViewItem* FListView::getCurrentItem()
 { return static_cast<FListViewItem*>(*current_iter); }
+
+//----------------------------------------------------------------------
+template<typename Compare>
+inline void FListView::setUserAscendingCompare (Compare cmp)
+{ user_defined_ascending = cmp; }
+
+//----------------------------------------------------------------------
+template<typename Compare>
+inline void FListView::setUserDescendingCompare (Compare cmp)
+{ user_defined_descending = cmp; }
 
 //----------------------------------------------------------------------
 inline bool FListView::setTreeView (bool on)
