@@ -1,3 +1,6 @@
+2018-09-28  Markus Gans  <guru.mail@muenster.de>
+	* FListView now has the ability to sort by columns
+
 2018-09-27  Markus Gans  <guru.mail@muenster.de>
 	* Move time event processing from FApplication to FObject
 
